// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SalaireTempsPartiel /> should add a period 1`] = `
.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12 {
  width: 2.6rem;
  height: 1.4rem;
  margin-left: 1rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c9:hover .c12 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c13 {
  margin: 2rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 2rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 2rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c8 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c11 {
  margin-left: 2rem;
  font-size: 1.4rem;
}

<div>
  <label
    class="c0"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de durée de travail
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        type="number"
        value=""
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c6"
          name="periods[0].salary"
          type="number"
          value=""
        />
        <span
          aria-hidden="true"
          class="c8"
        >
          €
        </span>
      </div>
      <button
        class="c9 c10 c11"
        type="button"
      >
        Supprimer
        <svg
          class="c12"
          fill="none"
          viewBox="0 0 28 15"
        >
          <path
            d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c9 c10 c13"
    type="button"
  >
    Ajouter une période
    <svg
      class="c12"
      fill="none"
      viewBox="0 0 28 15"
    >
      <path
        d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`<SalaireTempsPartiel /> should delete a period 1`] = `
.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12 {
  width: 2.6rem;
  height: 1.4rem;
  margin-left: 1rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c9:hover .c12 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c13 {
  margin: 2rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 2rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 2rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c8 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c11 {
  margin-left: 2rem;
  font-size: 1.4rem;
}

<div>
  <label
    class="c0"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de durée de travail
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        type="number"
        value="6"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c6"
          name="periods[0].salary"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c8"
        >
          €
        </span>
      </div>
      <button
        class="c9 c10 c11"
        type="button"
      >
        Supprimer
        <svg
          class="c12"
          fill="none"
          viewBox="0 0 28 15"
        >
          <path
            d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c9 c10 c13"
    type="button"
  >
    Ajouter une période
    <svg
      class="c12"
      fill="none"
      viewBox="0 0 28 15"
    >
      <path
        d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`<SalaireTempsPartiel /> should render 1`] = `
.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
}

.c10:focus,
.c10:hover,
.c10:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12 {
  width: 2.6rem;
  height: 1.4rem;
  margin-left: 1rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c9:hover .c12 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c13 {
  margin: 2rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  -webkit-flex-basis: 15rem;
  -ms-flex-preferred-size: 15rem;
  flex-basis: 15rem;
  margin-right: 2rem;
}

.c4 {
  -webkit-flex-basis: 8rem;
  -ms-flex-preferred-size: 8rem;
  flex-basis: 8rem;
  margin-right: 2rem;
}

.c3 {
  font-weight: 700;
}

.c5 {
  width: 100%;
}

.c6 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c8 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c11 {
  margin-left: 2rem;
  font-size: 1.4rem;
}

<div>
  <label
    class="c0"
  >
    Quels ont été les durées et les salaires des périodes à temps plein et à temps partiel ?
  </label>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Type de durée de travail
    </div>
    <div
      class="c4 c3"
    >
      Durée en mois
    </div>
    <div
      class="c3"
    >
      Rémunération
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[0].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[0].duration"
        type="number"
        value="12"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c6"
          name="periods[0].salary"
          type="number"
          value="2000"
        />
        <span
          aria-hidden="true"
          class="c8"
        >
          €
        </span>
      </div>
      <button
        class="c9 c10 c11"
        type="button"
      >
        Supprimer
        <svg
          class="c12"
          fill="none"
          viewBox="0 0 28 15"
        >
          <path
            d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        class="c5"
        name="periods[1].type"
      >
        <option>
          Temps partiel
        </option>
        <option>
          Temps plein
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c6"
        name="periods[1].duration"
        type="number"
        value="6"
      />
    </div>
    <div>
      <div
        class="c7"
      >
        <input
          class="c6"
          name="periods[1].salary"
          type="number"
          value="1000"
        />
        <span
          aria-hidden="true"
          class="c8"
        >
          €
        </span>
      </div>
      <button
        class="c9 c10 c11"
        type="button"
      >
        Supprimer
        <svg
          class="c12"
          fill="none"
          viewBox="0 0 28 15"
        >
          <path
            d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c9 c10 c13"
    type="button"
  >
    Ajouter une période
    <svg
      class="c12"
      fill="none"
      viewBox="0 0 28 15"
    >
      <path
        d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;
